# glfractals

./: CMakeLists.txt  main.cpp  shader.h  shaderloader.cpp  shaderloader.h  shaders.h  textureloader.cpp  textureloader.h
include/glad/: glad.c  glad.h
include/stb/: stb_image.h
